--- a/index.html
+++ b/index.html
@@ -8,14 +8,23 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
 </head>
 <body>
-  <div class="quiz-container">
-    <h1>Quiz Game</h1>
+<div class="back">
+  <div class="quiz-container" style="background-image: url('purple.jpeg'); background-size: cover;">
+    <h1>Brain Buster</h1>
     <div id="domain-selection">
       <h2>Select Your Quiz Domain</h2>
-      <button onclick="startQuiz('gk')">General Knowledge</button>
-      <button onclick="startQuiz('maths')">Maths</button>
-      <button onclick="startQuiz('sports')">Sports</button>
-      <button onclick="startQuiz('technical')">Technical</button>
+      <button class="flipButton knowledge" onclick="startQuiz('gk')">
+        <span style="font-style: italic; font-weight: 700;">Knowledge</span>
+      </button>
+      <button class="flipButton" onclick="startQuiz('maths')">
+        <span style="font-style: italic; font-weight: 700;">Maths</span>
+      </button>
+      <button class="flipButton" onclick="startQuiz('sports')">
+        <span style="font-style: italic; font-weight: 700;">Sports</span>
+      </button>
+      <button class="flipButton" onclick="startQuiz('technical')">
+        <span style="font-style: italic; font-weight: 700;">Technology</span>
+      </button>
     </div>
 
     <div id="quiz-game" class="hidden">
@@ -23,21 +32,30 @@
         <p id="question">Question will appear here</p>
         <div id="options"></div>
       </div>
-      <div id="progress">Question: <span id="current">0</span>/15</div>
-      <div id="score">Score: <span id="points">0 <i class="fa-solid fa-star"></i></span></div>
+      <div id="progress">
+        Question: <span id="current">0</span>/15
+      </div>
+      <div id="score">
+        Score: <span id="points">0 <i class="fa-solid fa-star"></i></span>
+      </div>
       <progress id="progress-bar" value="0" max="100"></progress>
       <button id="next-btn" onclick="nextQuestion()" class="hidden">Next</button>
+      <p id="level-cleared-msg" class="hidden"></p> <!-- Added this line to show level cleared message -->
     </div>
     
     <div id="game-over" class="hidden">
       <h2>Game Over!</h2>
-      <p>Your final score is <span id="final-score"></span></p>
+      <p id="final-score"></p>
       <p id="loss-msg"></p>
+      <p id="winner-msg" class="hidden"></p> <!-- Hidden message for winner -->
       <button onclick="restartGame()">Play Again</button>
     </div>
-    
-    <button id="start-btn" onclick="startGame()" class="hidden"><i class="fa-solid fa-play"></i> Start Game</button>
+
+    <button id="start-btn" onclick="startGame()" class="hidden">
+      <i class="fa-solid fa-play"></i> Start Game
+    </button>
   </div>
+</div>
   <script src="script.js"></script>
 </body>
 </html>
